<resources>
    <string name="app_name">PropertyManagementApp</string>
    <string name="edit_register_landlord">Landlord / Property Manager Email</string>
    <string name="edit_register_email">Email</string>
    <string name="edit_register_password">Password</string>
    <string name="edit_register_confirm_password">Confirm Password</string>
    <string name="register_button">Sign Up</string>
    <string name="edit_register_name">Name</string>
    <string name="error_network">Network is currently unavailable</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="city_address">%s, %s %s</string>
    <string name="add_todo_item">Add Todo Item</string>
    <string name="due_date">Due on %s</string>
    <string name="priority_display">%s Priority</string>
</resources>